--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Authenticate to Docker Hub
-        run: echo ${{ secrets.DOCKERTOKEN }} | docker login -u "<your-dockerhub-username>" --password-stdin
+        run: echo ${{ secrets.DOCKERTOKEN }} | docker login -u "<rajputmanav540>" --password-stdin
 
       - name: Build and Push Docker Image
         run: |
