--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -13,7 +13,6 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
 
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t <your-dockerhub-username>/fastapi-cd:latest .
-          docker push <your-dockerhub-username>/fastapi-cd:latest
+      - name: Build Docker image
+  run: docker build -t ${{ secrets.DOCKER_USERNAME }}/fastapi-cd:latest .
+
